thêm tính thời gian tải file còn lại và thêm cách xác định kiểu file